<?xml version="1.0"?>
<package format="3">
  <name>cuboid_robot_description</name>
  <version>0.0.1</version>
  <description>Cuboid robot simulation with lidar, teleop, Gazebo and SLAM.</description>
  <maintainer email="user@example.com">Halfblood Prince</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <depend>rviz2</depend>
  <depend>gazebo_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
