<?xml version="1.0"?>
<package format="3">
  <name>lidar_ground_world</name>
  <version>0.0.1</version>
  <description>Ground lidar with obstacles in Gazebo</description>

  <maintainer email="you@email.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

</package>